--- a/MOBILE/html/new/orderSheet_member.html
+++ b/MOBILE/html/new/orderSheet_member.html
@@ -507,7 +507,7 @@
                                     <div class="choice_wrap have_inner_txt between_space">
                                         <!-- 한개만 사용시 class="f_r" 넣어주세요 -->
                                         <div class="choice_wrap_inner f_l">
-                                            <input type="radio" name="orderInfo1" id="orderInfo_11" value="Y" checked="" />
+                                            <input type="radio" name="orderInfo1" id="orderInfo_11" value="Y" />
                                             <label for="orderInfo_11">주문자 정보와 동일</label>
                                         </div>
                                         <div class="choice_wrap_inner f_r">
