--- a/PC/html/new/menu1_1_02.html
+++ b/PC/html/new/menu1_1_02.html
@@ -786,49 +786,97 @@ jQuery(function($){
     </div>
     <!-- //sub top -->
     <ul>
-        <li><a href="/ht/help/sosCounselMain">SOS상담</a></li>
-        <li><a>공지사항</a>
+        <li>
+            <a>FAQ 통합검색</a>
+        </li>
+        <li>
+            <a>공지사항</a>
             <ul class="depth2">
-                <li><a href="/ht/help/listNotice">공지사항</a></li>
-                <li><a href="/ht/help/eventPrizeList">이벤트 당첨자</a></li>
-               
+                <li>
+                    <a href="/ht/help/listNotice">공지사항</a>
+                </li>
+                <li>
+                    <a href="/ht/help/eventPrizeList">이벤트 당첨자</a>
+                </li>
             </ul>
         </li>
-        <li><a>주문 FAQ</a>
+        <li>
+            <a>주문 FAQ</a>
             <ul class="depth2">
-                <li><a href="/ht/help/faqListC0391">주문결제</a></li>
-                <li><a href="/ht/help/faqListC0392">배송</a></li>
-                <li><a href="/ht/help/faqListC0393">반품/교환/환불</a></li>
-                <li><a href="/ht/help/faqListC0394">세금계산서/증빙</a></li>
+                <li>
+                    <a href="/ht/help/faqListC0391">주문결제</a>
+                </li>
+                <li>
+                    <a href="/ht/help/faqListC0392">배송</a>
+                </li>
+                <li>
+                    <a href="/ht/help/faqListC0393">반품/교환/환불</a>
+                </li>
+                <li>
+                    <a href="/ht/help/faqListC0394">세금계산서/증빙</a>
+                </li>
             </ul>
         </li>
-        <li><a>회원 FAQ</a>
+        <li>
+            <a>회원 FAQ</a>
             <ul class="depth2">
-                <li><a href="/ht/help/faqListC0401">회원정보</a></li>
-                <li><a href="/ht/help/faqListC0402">통합포인트/예치금/쿠폰</a></li>
-                <li><a href="/ht/help/faqListC0403">상품문의</a></li>
-                <li><a href="/ht/help/faqListC0404">이벤트</a></li>
+                <li>
+                    <a href="/ht/help/faqListC0401">회원정보</a>
+                </li>
+                <li>
+                    <a href="/ht/help/faqListC0402">통합포인트/예치금/쿠폰</a>
+                </li><!-- 
+                <li>
+                    <a href="/ht/help/faqListC0403">상품문의</a>
+                </li> -->
+                <li>
+                    <a href="/ht/help/faqListC0404">이벤트</a>
+                </li>
             </ul>
         </li>
-        <li><a>문의사항</a>
+        <li>
+            <a>기타 FAQ</a>
             <ul class="depth2">
-                <li><a href="/ht/help/vendorInquiry">상품입점문의</a></li>
-                <li><a href="/ht/help/businessBuy">대량구매상담</a></li>
+                <li>
+                    <a href="/ht/help/faqListC0411">영업점</a>
+                </li>
+                <li>
+                    <a href="/ht/help/faqListC0412">사이트이용/장애/기타</a>
+                </li>
             </ul>
         </li>
-        <li><a>서비스안내</a>
+        <li>
+            <a>문의사항</a>
             <ul class="depth2">
-                <li><a href="/ht/help/memberShip">통합 멤버십</a></li>
-                <li><a href="/ht/help/savePointByOffBill">영수증 적립 서비스</a></li>
-                <li><a href="/ht/help/carvingService">각인 서비스</a></li>
-                <li><a href="/ht/help/packingService">포장 서비스</a></li>
-                <li><a href="/ht/help/cardInfo">제휴/할인 카드</a></li>
+                <li>
+                    <a href="/ht/help/vendorInquiry">상품입점문의</a>
+                </li>
+                <li>
+                    <a href="/ht/help/businessBuy">대량구매상담</a>
+                </li>
             </ul>
         </li>
-        <li><a>기타 FAQ</a>
+        <li>
+            <a href="/ht/help/sosCounselMain">SOS상담</a>
+        </li>
+        <li>
+            <a>서비스안내</a>
             <ul class="depth2">
-                <li><a href="/ht/help/faqListC0411">영업점</a></li>
-                <li><a href="/ht/help/faqListC0412">사이트이용/장애/기타</a></li>
+                <li>
+                    <a href="/ht/help/memberShip">통합 멤버십</a>
+                </li>
+                <li>
+                    <a href="/ht/help/savePointByOffBill">영수증 적립 서비스</a>
+                </li>
+                <li>
+                    <a href="/ht/help/carvingService">각인 서비스</a>
+                </li>
+                <li>
+                    <a href="/ht/help/packingService">포장 서비스</a>
+                </li>
+                <li>
+                    <a href="/ht/help/cardInfo">제휴/할인 카드</a>
+                </li>
             </ul>
         </li>
     </ul>
