--- a/PC/html/new/orderSheet.html
+++ b/PC/html/new/orderSheet.html
@@ -328,7 +328,7 @@
                             <h3 class="i_txt">배송지 정보</h3>
                             <div class="choice_wrap">
                                 <span class="choice_wrap_inner">
-                                    <input type="radio" name="orderInfo1" id="orderInfo_11" value="Y" checked="" />
+                                    <input type="radio" name="orderInfo1" id="orderInfo_11" value="Y" />
                                     <label for="orderInfo_11">주문자 정보와 동일</label>
                                 </span>                                
                             </div>
