--- a/PC/html/new/menu7_2.html
+++ b/PC/html/new/menu7_2.html
@@ -665,14 +665,15 @@
                     <div class="lnb">                        
                         <!-- 201228 작업부분 -->
                         <!-- sub top -->
-                            <div class="page_location"> <h2 class="title">
+                        <div class="page_location">
+                            <h2 class="title">
                                 <a href="javascript:;">고객센터</a>
                             </h2>
                         </div>
                         <!-- //sub top -->
                         <ul>
                             <li>
-                                <a href="/ht/help/sosCounselMain">SOS상담</a>
+                                <a>FAQ 통합검색</a>
                             </li>
                             <li>
                                 <a>공지사항</a>
@@ -710,12 +711,23 @@
                                     </li>
                                     <li>
                                         <a href="/ht/help/faqListC0402">통합포인트/예치금/쿠폰</a>
-                                    </li>
+                                    </li><!-- 
                                     <li>
                                         <a href="/ht/help/faqListC0403">상품문의</a>
-                                    </li>
+                                    </li> -->
                                     <li>
                                         <a href="/ht/help/faqListC0404">이벤트</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a>기타 FAQ</a>
+                                <ul class="depth2">
+                                    <li>
+                                        <a href="/ht/help/faqListC0411">영업점</a>
+                                    </li>
+                                    <li>
+                                        <a href="/ht/help/faqListC0412">사이트이용/장애/기타</a>
                                     </li>
                                 </ul>
                             </li>
@@ -729,6 +741,9 @@
                                         <a href="/ht/help/businessBuy">대량구매상담</a>
                                     </li>
                                 </ul>
+                            </li>
+                            <li>
+                                <a href="/ht/help/sosCounselMain">SOS상담</a>
                             </li>
                             <li>
                                 <a>서비스안내</a>
@@ -747,17 +762,6 @@
                                     </li>
                                     <li>
                                         <a href="/ht/help/cardInfo">제휴/할인 카드</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a>기타 FAQ</a>
-                                <ul class="depth2">
-                                    <li>
-                                        <a href="/ht/help/faqListC0411">영업점</a>
-                                    </li>
-                                    <li>
-                                        <a href="/ht/help/faqListC0412">사이트이용/장애/기타</a>
                                     </li>
                                 </ul>
                             </li>
