--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -933,7 +933,7 @@ th.row-headers-background {
         <td class="s20"></td>
         <td class="s25"></td>
       </tr>
-     <!--  <tr style='height:29px;'>
+      <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
        <td class="s14"></td>
         <td class="s15" dir="ltr" colspan="9">
@@ -1259,7 +1259,7 @@ th.row-headers-background {
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
-      </tr> -->
+      </tr>
     </tbody>
   </table>
 </div>
