--- a/MOBILE/html/new/listFaq.html
+++ b/MOBILE/html/new/listFaq.html
@@ -6,23 +6,23 @@
 <meta name="format-detection" content="telephone=no, address=no, email=no" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title>HOTTRACKS - 생활 속 감성충전소</title>
-<META http-equiv="Expires" content="-1">
-<META http-equiv="Pragma" content="no-cache">
-<META http-equiv="Cache-Control" content="No-Cache">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-itunes-app" content="app-id=1129743143">
-<meta name="google-play-app" content="app-id=kr.co.hottracks.m.and">
-<link rel="apple-touch-icon-precomposed" href="/images/content/ico_app.png" />
-<link rel="apple-touch-startup-image" href="/images/content/ico_app.png">
-<link href="/favicon.ico" rel="shortcut icon">
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,400,700|Titillium+Web:400,600&display=swap&subset=korean">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/layout.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/content.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/common.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/common_v2.css">
-<link rel="stylesheet" type="text/css" href="/pages/html/css/swiper-5.1.0.min.css">
-<script type="text/javascript" src="/js/jquery-1.9.1.min.js?20191101"></script> 
-<script type="text/javascript" src="/js/common.js?20191101"></script>
+
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css">
+<link rel="stylesheet" type="text/css" href="../../css/layout.css">
+<link rel="stylesheet" type="text/css" href="../../css/content.css">
+<link rel="stylesheet" type="text/css" href="../../css/common.css">
+<link rel="stylesheet" type="text/css" href="../../css/swiper.min.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/common_v2.css">
+<link rel="stylesheet" type="text/css" href="../../css/biz/hottm_yj.css">
+<!-- 201228 작업부분 -->
+<link rel="stylesheet" type="text/css" href="../../css/new/orderandpay.css">
+
+<script type="text/javascript" src="../../js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="../../js/swiper.min.js"></script>
+<script type="text/javascript" src="../../js/common.js"></script>
+<script type="text/javascript" src="../../js/biz/common_v2.js"></script>
+<script type="text/javascript" src="../../js/biz/jquery/jquery.easing.1.3.min.js"></script>
+<script type="text/javascript" src="../../js/biz/jquery/TweenMax.min.js"></script>
 </head>
 <body id="layer">
 
@@ -340,7 +340,7 @@ function footerFn(){
 		    </div>
 			<div class="cont">
 				<a href="#n" _traget="_blank" _onclick="winOpen('http://www.hottracks.co.kr/heart/');return false;">
-					<img src="/images/biz/common/img_award.png" alt="소셜아이어워드 2019">
+					<img src="../../images/biz/common/img_award.png" alt="소셜아이어워드 2019">
 				</a>
 				<ul class="sns_wrap">
 		            <li class="ig"><a href="#n" _traget="_blank" _onclick="linkToInstagram('home');return false;">instagram</a></li>
