--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -1006,6 +1006,56 @@ th.row-headers-background {
         <td class="s20"></td>
         <td class="s25"></td>
       </tr>
+      <tr style="height:29px;">
+        <th id="587364640R52" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">53</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s15" dir="ltr" rowspan="4">#Contact<br>
+          (고객센터)</td>
+        <td class="s14" >고객센터</td>
+        <td class="s9"></td>
+        <td class="s9"></td>
+        <td class="s16"></td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/cs_main.html">http://devm.hottracks.co.kr/html/new/cs_main.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+      </tr>
+        <tr style="height:29px;">
+        <th id="587364640R53" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">54</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s14"></td>
+        <td class="s14">공지사항</td>
+        <td class="s16">(T)공지사항</td>
+        <td class="s16" dir="ltr">목록&amp;상세 (슬라이드 확장)</td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listNotice.html">http://devm.hottracks.co.kr/html/new/listNotice.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+      </tr>
+      <tr style="height:29px;">
+        <th id="587364640R54" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">55</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s14"></td>
+        <td class="s16"></td>
+        <td class="s16" dir="ltr">(T)이벤트 당첨자</td>
+        <td class="s16" dir="ltr">목록&amp;상세 (슬라이드 확장)</td>
+        <td class="s16"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listEventPrize.html">http://devm.hottracks.co.kr/html/new/listEventPrize.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+      </tr>
+      <tr style="height:29px;">
+        <th id="587364640R55" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">56</div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s20"></td>
+        <td class="s20" dir="ltr">자주 묻는 질문</td>
+        <td class="s20">목록&amp;상세 (총9개 등록)</td>
+        <td class="s20"></td>
+        <td class="s20"></td>
+        <td class="s23" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/listFaq.html">http://devm.hottracks.co.kr/html/new/listFaq.html</a></td>
+        <td class="s24" dir="ltr">완료</td>
+        <td class="s18"></td>
+      </tr>
     </tbody>
   </table>
 </div>
