--- a/PC/html/new/@@template.html
+++ b/PC/html/new/@@template.html
@@ -127,16 +127,8 @@
         <!-- Container -->
         <div id="container">
             <!-- 컨텐츠 -->
-            <div class="content">
-
-                <div>
-                    <label for=""><input type="checkbox"></label>
-                </div>
-
-                
-
-
-
+            <!-- 201228 : S 작업부분 id="content" class="orderandpay" 넣어주세요-->
+            <div id="content" class="content orderandpay">
                 
             </div>
             <!-- //컨텐츠 -->
