--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -821,15 +821,40 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
         <td class="s14"></td>
-        <td class="s15" dir="ltr">검색</td>
+        <td class="s15" dir="ltr" rowspan="3">검색</td>
         <td class="s16">검색결과</td>
-        <td class="s16"></td>
+        <td class="s16">성공</td>
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/search.html">http://dev.hottracks.co.kr/html/new/search.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16">인기검색어 슬라이드, 결과팝업</td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr" rowspan="2"></td>
+        <td class="s16">실패</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/search_none.html">http://dev.hottracks.co.kr/html/new/search_none.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R5" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">6</div></th>
+        <td class="s14"></td>
+        <td class="s16" dir="ltr">실패</td>
+        <td class="s10">유도</td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/search_none01.html">http://dev.hottracks.co.kr/html/new/search_none01.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -933,7 +958,7 @@ th.row-headers-background {
         <td class="s20"></td>
         <td class="s25"></td>
       </tr>
-      <tr style='height:29px;'>
+<!--       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
        <td class="s14"></td>
         <td class="s15" dir="ltr" colspan="9">
@@ -943,8 +968,7 @@ th.row-headers-background {
             201228 S : 작업부분 <br>
             // 201228 E : 작업부분 <br>
 
-            <strong style="color:red">고객센터 부분은 따로 퍼블 작업되어있는 퍼블부분 확인 불가능으로
-            운영 소스 전부 긁어다가 경로만 바꿔서 적용 하여 로딩되는 시간이 깁니다. <br> 주석부분만 확인 하여 적용 요청</strong>
+            
         </td>
       </tr>
         <tr>
@@ -1259,7 +1283,7 @@ th.row-headers-background {
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
-      </tr>
+      </tr> -->
     </tbody>
   </table>
 </div>
