--- a/MOBILE/html/new/search_result_fail_v2.html
+++ b/MOBILE/html/new/search_result_fail_v2.html
@@ -60,8 +60,9 @@
 		<a href="#none" class="btn_search"><span>검색</span></a>
 	</div>
 
+	<!-- 21014 S : 작업부분 -->
 	<div class="search_wrap">
-		<div class="search_view">
+		<div class="search_view">			
 			<div class="top_tag">
 				<div class="swiper-container">
 					<div class="swiper-wrapper">
@@ -75,309 +76,327 @@
 					</div>
 				</div>
 			</div>
-			<!-- 검색결과 실패 -->
-			<div class="fail_search">
-				<h5 class="fail_search_tit mgt10">일치되는 검색결과를 찾을 수 없습니다</h5>
+			<div class="none_txt another">
+				<p class="text_another">
+					<span>혹시 "</span>
+					<span class="color02">다이어리</span>
+					<span>"를(을) </span>
+					<span>검색하셨나요?</span>
+				</p>
+				<div class="text_defalut">
+					<span>입력한</span> <span class="bold">다이어라</span> <span>로</span>
+					<a href="javascript:;" class="gotopage_icon_arrow">재검색하기</a>
+				</div>
 			</div>
-			<div class="about_search">
-				<h5 class="search_tit mgt10">혹시,<br/>이런 키워드는 어떠세요?</h5>
-				<ul class="with_word">
-					<li>다이어리</li>
-					<li>필통</li>
-					<li>스티커</li>
-					<li>키링</li>
-					<li>디즈니</li>
-					<li>다이어리</li>
-					<li>필통</li>
-					<li>스티커</li>
-					<li>키링</li>
-					<li>디즈니</li>
-				</ul>
-			</div>
-			<div class="cont01">
-				<div class="swiper-container">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<a href="#none">
-								<div class="thum">
-									<img src="../../images/biz/thums/img_taste02.png" alt="">
-								</div>
-								<div class="desc">
-									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-									<p class="price font_t">16,000<span class="percent">20%</span></p>
-								</div>
-							</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="#none">
-								<div class="thum">
-									<img src="../../images/biz/thums/img_taste03.png" alt="">
-								</div>
-								<div class="desc">
-									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-									<p class="price font_t">16,000<span class="percent">20%</span></p>
-								</div>
-							</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="#none">
-								<div class="thum">
-									<img src="../../images/biz/thums/img_taste04.png" alt="">
-								</div>
-								<div class="desc">
-									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-									<p class="price font_t">16,000<span class="percent">20%</span></p>
-								</div>
-							</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="#none">
-								<div class="thum">
-									<img src="../../images/biz/thums/img_taste05.png" alt="">
-								</div>
-								<div class="desc">
-									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-									<p class="price font_t">16,000<span class="percent">20%</span></p>
-								</div>
-							</a>
+			<div class="category_wrap">
+				<div class="cont03">
+					<!-- 제품 -->
+					<div class="search_tab">
+						<ul>
+							<li class="active"><a href="#none">문구/기프트<span class="font_t">(2,110)</span></a></li>
+							<li><a href="#none">음반<span class="font_t">(2,110)</span></a></li>
+						</ul>
+					</div>
+					<!-- 201222 S : 작업부분 -->
+					<div class="pd_total">
+						<em class="font_t">2,110</em>건
+
+						<div class="sort_filter_box">
+							<div class="sort_filter">
+								<select name="" id="">
+									<option value="">인기순</option>
+									<option value="">신상품순</option>
+									<option value="">낮은가격순</option>
+									<option value="">높은가격순</option>
+									<option value="">할인율순</option>
+									<option value="">좋아요인기순</option>
+									<option value="">리뷰많은순</option>
+								</select>
+								<select name="" id="">
+									<option value="">40개씩</option>
+									<option value="">80개씩</option>
+									<option value="">120개씩</option>
+								</select>
+							</div>
+							<div class="filter_btn">
+								<a href="#none" class="btn_search_detail">필터</a>
+							</div>
 						</div>
 					</div>
+					<!--// 201222 E : 작업부분 -->
+					<div class="pd_list pb0">
+						<ul>
+							<li>
+								<a href="#none">
+									<div class="thum">
+										<img src="../../images/biz/thums/img_main25.png" alt="">
+									</div>
+								</a>
+								<!-- 클릭시 active : class 추가 -->
+								<a href="#none" class="btn_like active"><span>좋아요</span></a>
+								<a href="#none">
+									<div class="cont">
+										<p class="brand">wearinggeul</p>
+										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+										<p class="price font_t">
+											<span class="percent">20%</span>
+											<span>999,999</span>
+											<span class="discount">999,999</span>
+										</p>
+										<div class="info">
+											<span class="reply">999+</span>
+											<span class="like">999+</span>
+										</div>
+										<div class="badge">
+											<span class="badge01">쿠폰</span>
+											<span class="badge02">사은품</span>
+											<span class="badge02">무료배송</span>
+										</div>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="#none">
+									<div class="thum">
+										<img src="../../images/biz/thums/img_main22.png" alt="">
+									</div>
+								</a>
+								<!-- 클릭시 active : class 추가 -->
+								<a href="#none" class="btn_like"><span>좋아요</span></a>
+								<a href="#none">
+									<div class="cont">
+										<p class="brand">wearinggeul</p>
+										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+										<p class="price font_t">
+											<span class="percent">20%</span>
+											<span>999,999</span>
+											<span class="discount">999,999</span>
+										</p>
+										<div class="info">
+											<span class="reply">999+</span>
+											<span class="like">999+</span>
+										</div>
+										<div class="badge">
+											<span class="badge01">쿠폰</span>
+											<span class="badge02">사은품</span>
+											<span class="badge02">무료배송</span>
+										</div>
+									</div>
+								</a>
+							</li>
+							<!-- 품절시 sold_out : class 추가 -->
+							<li class="sold_out">
+								<a href="#none">
+									<div class="thum">
+										<img src="../../images/biz/thums/img_main21.png" alt="">
+									</div>
+								</a>
+								<!-- 클릭시 active : class 추가 -->
+								<a href="#none" class="btn_like"><span>좋아요</span></a>
+								<a href="#none">
+									<div class="cont">
+										<p class="brand">wearinggeul</p>
+										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+										<p class="price font_t">
+											<span class="percent">20%</span>
+											<span>999,999</span>
+											<span class="discount">999,999</span>
+										</p>
+										<div class="info">
+											<span class="reply">999+</span>
+											<span class="like">999+</span>
+										</div>
+										<div class="badge">
+											<span class="badge03">품절</span>
+										</div>
+									</div>
+								</a>
+							</li>
+							<!-- 품절시 sold_out : class 추가 -->
+							<li class="sold_out">
+								<a href="#none">
+									<div class="thum">
+										<img src="../../images/biz/thums/img_main20.png" alt="">
+									</div>
+								</a>
+								<!-- 클릭시 active : class 추가 -->
+								<a href="#none" class="btn_like"><span>좋아요</span></a>
+								<a href="#none">
+									<div class="cont">
+										<p class="brand">wearinggeul</p>
+										<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
+										<p class="price font_t">
+											<span class="percent">20%</span>
+											<span>999,999</span>
+											<span class="discount">999,999</span>
+										</p>
+										<div class="info">
+											<span class="reply">999+</span>
+											<span class="like">999+</span>
+										</div>
+										<div class="badge">
+											<span class="badge03">품절</span>
+										</div>
+									</div>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<!--// 제품 -->
 
-					<!-- 스크롤바 -->
-					<div class="swiper-scrollbar"></div>
+					<div class="pagination_v2">
+						<a href="#none" class="arr prev first"></a>
+						<a href="#none" class="active">1</a>
+						<a href="#none">2</a>
+						<a href="#none">3</a>
+						<a href="#none">4</a>
+						<a href="#none">5</a>
+						<a href="#none" class="arr next"></a>
+					</div>
 				</div>
-			</div>
 
-
-			<div class="category_wrap cont03">
-				<!-- 제품 -->
-				<div class="search_tab">
-					<ul>
-						<li class="active"><a href="#none">문구/기프트<span class="font_t">(2,110)</span></a></li>
-						<li><a href="#none">음반<span class="font_t">(2,110)</span></a></li>
-					</ul>
+				<div class="distance">				
+					<h5 class="search_tit">혹시,<br>이 키워드는 어떠세요?</h5>
+					<div class="keyword_list">
+						<ul>
+							<li><a href="#none">다이어리</a></li>
+							<li><a href="#none">필통</a></li>
+							<li><a href="#none">다이어리</a></li>
+							<li><a href="#none">필통</a></li>
+							<li><a href="#none">다이어리</a></li>
+							<li><a href="#none">필통</a></li>
+							<li><a href="#none">다이어리</a></li>
+							<li><a href="#none">필통</a></li>
+							<li><a href="#none">다이어리</a></li>
+							<li><a href="#none">필통</a></li>
+						</ul>
+					</div>
 				</div>
-				<!-- 201222 S : 작업부분 -->
-				<div class="pd_total">
-					<em class="font_t">2,110</em>건
 
-					<div class="sort_filter_box">
-						<div class="sort_filter">
-							<select name="" id="">
-								<option value="">인기순</option>
-								<option value="">신상품순</option>
-								<option value="">낮은가격순</option>
-								<option value="">높은가격순</option>
-								<option value="">할인율순</option>
-								<option value="">좋아요인기순</option>
-								<option value="">리뷰많은순</option>
-							</select>
-							<select name="" id="">
-								<option value="">40개씩</option>
-								<option value="">80개씩</option>
-								<option value="">120개씩</option>
-							</select>
+				<div class="cont02 case2 mt0">
+					<div class="event_banner"><!-- 이미지가 1개인 경우 -->
+						<ul>
+							<li>
+								<a href="#none">
+									<span class="badge badge01">관련이벤트</span>
+									<div class="img_wrap">
+										<img src="../../images/biz/thums/main_banner02.png" alt="">
+									</div>
+									<span class="font_t percent">10%</span>
+									<strong>아날로그 갬수성</strong>
+									<p>코닥~하고 찰칵 찍어요!</p>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div class="swiper-container">
+						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<a href="#none">
+									<span class="badge badge01">관련이벤트</span>
+									<div class="thum">
+										<img src="../../images/biz/thums/event_banner01.png" alt="">
+									</div>
+									<span class="font_t percent">10%</span>
+									<strong>아날로그 갬수성</strong>
+									<p>코닥~하고 찰칵 찍어요!</p>
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#none">
+									<span class="badge badge02">인기이벤트</span>
+									<div class="thum">
+										<img src="../../images/biz/thums/event_banner01.png" alt="">
+									</div>
+									<span class="font_t percent">10%</span>
+									<strong>아날로그 갬수성</strong>
+									<p>코닥~하고 찰칵 찍어요!</p>
+								</a>
+							</div>
+							<div class="swiper-slide">
+								<a href="#none">
+									<div class="thum">
+										<img src="../../images/biz/thums/event_banner01.png" alt="">
+									</div>
+									<span class="font_t percent">10%</span>
+									<strong>아날로그 갬수성</strong>
+									<p>코닥~하고 찰칵 찍어요!</p>
+								</a>
+							</div>
 						</div>
-						<div class="filter_btn">
-							<a href="#none" class="btn_search_detail">필터</a>
+
+						<!-- 스크롤바 -->
+						<div class="swiper-scrollbar"></div>
+
+						<!-- swiper-pagination -->
+						<div class="pagination_wrap">
+							<div class="swiper-pagination"></div>
 						</div>
 					</div>
 				</div>
-				<!--// 201222 E : 작업부분 -->
-				<div class="pd_list">
-					<ul>
-						<li>
-							<a href="#none">
-								<div class="thum">
-									<img src="../../images/biz/thums/img_main25.png" alt="">
-								</div>
-							</a>
-							<!-- 클릭시 active : class 추가 -->
-							<a href="#none" class="btn_like active"><span>좋아요</span></a>
-							<a href="#none">
-								<div class="cont">
-									<p class="brand">wearinggeul</p>
-									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-									<p class="price font_t">
-										<span class="percent">20%</span>
-										<span>999,999</span>
-										<span class="discount">999,999</span>
-									</p>
-									<div class="info">
-										<span class="reply">999+</span>
-										<span class="like">999+</span>
-									</div>
-									<div class="badge">
-										<span class="badge01">쿠폰</span>
-										<span class="badge02">사은품</span>
-										<span class="badge02">무료배송</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a href="#none">
-								<div class="thum">
-									<img src="../../images/biz/thums/img_main22.png" alt="">
-								</div>
-							</a>
-							<!-- 클릭시 active : class 추가 -->
-							<a href="#none" class="btn_like"><span>좋아요</span></a>
-							<a href="#none">
-								<div class="cont">
-									<p class="brand">wearinggeul</p>
-									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-									<p class="price font_t">
-										<span class="percent">20%</span>
-										<span>999,999</span>
-										<span class="discount">999,999</span>
-									</p>
-									<div class="info">
-										<span class="reply">999+</span>
-										<span class="like">999+</span>
-									</div>
-									<div class="badge">
-										<span class="badge01">쿠폰</span>
-										<span class="badge02">사은품</span>
-										<span class="badge02">무료배송</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<!-- 품절시 sold_out : class 추가 -->
-						<li class="sold_out">
-							<a href="#none">
-								<div class="thum">
-									<img src="../../images/biz/thums/img_main21.png" alt="">
-								</div>
-							</a>
-							<!-- 클릭시 active : class 추가 -->
-							<a href="#none" class="btn_like"><span>좋아요</span></a>
-							<a href="#none">
-								<div class="cont">
-									<p class="brand">wearinggeul</p>
-									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-									<p class="price font_t">
-										<span class="percent">20%</span>
-										<span>999,999</span>
-										<span class="discount">999,999</span>
-									</p>
-									<div class="info">
-										<span class="reply">999+</span>
-										<span class="like">999+</span>
-									</div>
-									<div class="badge">
-										<span class="badge03">품절</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<!-- 품절시 sold_out : class 추가 -->
-						<li class="sold_out">
-							<a href="#none">
-								<div class="thum">
-									<img src="../../images/biz/thums/img_main20.png" alt="">
-								</div>
-							</a>
-							<!-- 클릭시 active : class 추가 -->
-							<a href="#none" class="btn_like"><span>좋아요</span></a>
-							<a href="#none">
-								<div class="cont">
-									<p class="brand">wearinggeul</p>
-									<p class="tit">[페이스인페이스]실키포어 선스틱 실키포어 선스틱</p>
-									<p class="price font_t">
-										<span class="percent">20%</span>
-										<span>999,999</span>
-										<span class="discount">999,999</span>
-									</p>
-									<div class="info">
-										<span class="reply">999+</span>
-										<span class="like">999+</span>
-									</div>
-									<div class="badge">
-										<span class="badge03">품절</span>
-									</div>
-								</div>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<!--// 제품 -->
-
-				<div class="pagination_v2">
-					<a href="#none" class="arr prev first"></a>
-					<a href="#none" class="active">1</a>
-					<a href="#none">2</a>
-					<a href="#none">3</a>
-					<a href="#none">4</a>
-					<a href="#none">5</a>
-					<a href="#none" class="arr next"></a>
-				</div>
-			</div>
-
-			<div class="cont02 case2 space_type1">
-				<div class="event_banner"><!-- 이미지가 1개인 경우 -->
-					<ul>
-						<li>
-							<a href="#none">
-								<span class="badge badge01">관련이벤트</span>
-								<div class="img_wrap">
-									<img src="../../images/biz/thums/main_banner02.png" alt="">
-								</div>
-								<span class="font_t percent">10%</span>
-								<strong>아날로그 갬수성</strong>
-								<p>코닥~하고 찰칵 찍어요!</p>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div class="swiper-container">
-					<div class="swiper-wrapper">
-						<div class="swiper-slide">
-							<a href="#none">
-								<!-- <span class="badge badge01">관련이벤트</span> -->
-								<div class="thum">
-									<img src="../../images/biz/thums/event_banner01.png" alt="">
-								</div>
-								<span class="font_t percent">10%</span>
-								<strong>아날로그 갬수성</strong>
-								<p>코닥~하고 찰칵 찍어요!</p>
-							</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="#none">
-								<!-- <span class="badge badge02">인기이벤트</span> -->
-								<div class="thum">
-									<img src="../../images/biz/thums/event_banner01.png" alt="">
-								</div>
-								<span class="font_t percent">10%</span>
-								<strong>아날로그 갬수성</strong>
-								<p>코닥~하고 찰칵 찍어요!</p>
-							</a>
-						</div>
-						<div class="swiper-slide">
-							<a href="#none">
-								<div class="thum">
-									<img src="../../images/biz/thums/event_banner01.png" alt="">
-								</div>
-								<span class="font_t percent">10%</span>
-								<strong>아날로그 갬수성</strong>
-								<p>코닥~하고 찰칵 찍어요!</p>
-							</a>
+				<div>					
+					<h5 class="search_tit distance">가끔은,<br>베스트셀러도 좋아요</h5>
+					<div class="goods_wrap category_wrap">
+						<div class="pd_list pd_best">
+							<ul>
+								<li>
+									<a href="#none">
+										<div class="thum">
+											<img src="../../images/biz/thums/img_main04.png" alt="">
+										</div>
+										<div class="cont">
+											<p class="brand">indigo</p>
+											<p class="tit">2020 보통날 일기장 다이어리(일간/만년형/32절)</p>
+											<p class="price font_t">
+												<span class="percent">10.3%</span>
+												<span>9,012,900</span>
+												<span class="discount">9,129,900</span>
+											</p>
+											<!-- 뱃지 활성화시 on : class 추가 -->
+											<div class="badge">
+												<span class="badge01 on">쿠폰</span>
+												<span class="badge02 on">사은품</span>
+												<span class="badge02 on">무료배송</span>
+											</div>
+											<div class="info">
+												<span class="reply">999+</span>
+												<span class="like">999+</span>
+											</div>
+										</div>
+									</a>
+								</li>
+								<li>
+									<a href="#none">
+										<div class="thum">
+											<img src="../../images/biz/thums/img_main05.png" alt="">
+										</div>
+										<div class="cont">
+											<p class="brand">indigo</p>
+											<p class="tit">2020 보통날 일기장 다이어리(일간/만년형/32절)</p>
+											<p class="price font_t">
+												<span>999,999</span>
+											</p>
+											<!-- 뱃지 활성화시 on : class 추가 -->
+											<div class="badge">
+												<span class="badge01">쿠폰</span>
+												<span class="badge02">사은품</span>
+												<span class="badge02 on">무료배송</span>
+											</div>
+											<div class="info">
+												<span class="reply">999+</span>
+												<span class="like">999+</span>
+											</div>
+										</div>
+									</a>
+								</li>
+							</ul>
 						</div>
 					</div>
-
-					<!-- 스크롤바 -->
-					<div class="swiper-scrollbar"></div>
-
-					<!-- swiper-pagination -->
-					<!-- <div class="pagination_wrap">
-						<div class="swiper-pagination"></div>
-					</div> -->
 				</div>
 			</div>
 		</div>
 	</div>
+	<!--// 21014 E : 작업부분 -->
 
 	<!-- content -->
 	<div id="content" class="mt0">
