--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -822,18 +822,52 @@ th.row-headers-background {
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
         <td class="s14" ></td>
-        <td class="s15" rowspan="2">검색</td>
-        <td class="s16" dir="ltr">검색결과</td>
+        <td class="s15" rowspan="4">검색</td>
+        <td class="s16" dir="ltr">검색레이어</td>
         <td class="s16"></td>
         <td class="s10"></td>
         <td class="s16"></td>
         <td class="s17"></td>
-        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/search_view.html">http://devm.hottracks.co.kr/html/new/search_view.html</a></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/search.html">http://devm.hottracks.co.kr/html/new/search.html</a></td>
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
       </tr>
       <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
+        <td class="s14" ></td>
+        <td class="s16" dir="ltr" rowspan="3">검색결과 </td>
+        <td class="s16">성공</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/search_result_ture.html">http://devm.hottracks.co.kr/html/new/search_result_ture.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s16">실패</td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/search_result_fail.html">http://devm.hottracks.co.kr/html/new/search_result_fail.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
+        <td class="s14" dir="ltr"></td>
+        <td class="s16">실패</td>
+        <td class="s10">유도</td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/search_result_fail_v2.html">http://devm.hottracks.co.kr/html/new/search_result_fail_v2.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
+      <!-- <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
         <td class="s14" ></td>
         <td class="s16" dir="ltr">검색레이어</td>
         <td class="s16"></td>
@@ -844,7 +878,7 @@ th.row-headers-background {
         <td class="s19" dir="ltr">완료</td>
         <td class="s16"></td>
         <td class="s4"></td>
-      </tr>
+      </tr> -->
       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">5</div></th>
         <td class="s14"></td>
