--- a/PC/html/new/search_none01.html
+++ b/PC/html/new/search_none01.html
@@ -695,7 +695,7 @@
 
 				<!-- 21014 S : 작업부분 -->
 				<div class="search_none">
-					<div class="none_txt another mt140">
+					<div class="none_txt another mt120">
 						<p class="text_another">
 							<span>혹시 "</span>
 							<span class="color02">다이어리</span>
@@ -1129,21 +1129,22 @@
 								<a href="javascript:srchPageMove('6')" class="arr next"></a>
 							</div>
 						</div>
-
-						<h5 class="search_tit">혹시, 이런 키워드는 어떠세요?</h5>
-						<div class="keyword_list">
-							<ul>
-								<li><a href="#none">다이어리</a></li>
-								<li><a href="#none">필통</a></li>
-								<li><a href="#none">다이어리</a></li>
-								<li><a href="#none">필통</a></li>
-								<li><a href="#none">다이어리</a></li>
-								<li><a href="#none">필통</a></li>
-								<li><a href="#none">다이어리</a></li>
-								<li><a href="#none">필통</a></li>
-								<li><a href="#none">다이어리</a></li>
-								<li><a href="#none">필통</a></li>
-							</ul>
+						<div>							
+							<h5 class="search_tit">혹시, 이런 키워드는 어떠세요?</h5>
+							<div class="keyword_list">
+								<ul>
+									<li><a href="#none">다이어리</a></li>
+									<li><a href="#none">필통</a></li>
+									<li><a href="#none">다이어리</a></li>
+									<li><a href="#none">필통</a></li>
+									<li><a href="#none">다이어리</a></li>
+									<li><a href="#none">필통</a></li>
+									<li><a href="#none">다이어리</a></li>
+									<li><a href="#none">필통</a></li>
+									<li><a href="#none">다이어리</a></li>
+									<li><a href="#none">필통</a></li>
+								</ul>
+							</div>
 						</div>
 						<div class="cont01 distance pt0">
 							<h5 class="search_tit">핫트랙스의 이벤트를 만나보세요. </h5>
