--- a/MOBILE/html/new/search_result_fail_v2.html
+++ b/MOBILE/html/new/search_result_fail_v2.html
@@ -63,7 +63,7 @@
 	<!-- 21014 S : 작업부분 -->
 	<div class="search_wrap">
 		<div class="search_view">			
-			<div class="top_tag">
+			<!-- <div class="top_tag">
 				<div class="swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide"><a href="#none">보냉텀블러</a></div>
@@ -75,7 +75,7 @@
 						<div class="swiper-slide"><a href="#none">아이스텀블러</a></div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="none_txt another">
 				<p class="text_another">
 					<span>혹시 "</span>
@@ -88,8 +88,8 @@
 					<a href="javascript:;" class="gotopage_icon_arrow">재검색하기</a>
 				</div>
 			</div>
-			<div class="category_wrap">
-				<div class="cont03">
+			<div class="category_wrap cont03">
+				<div class="">
 					<!-- 제품 -->
 					<div class="search_tab">
 						<ul>
@@ -124,7 +124,7 @@
 						</div>
 					</div>
 					<!--// 201222 E : 작업부분 -->
-					<div class="pd_list pb0">
+					<div class="pd_list">
 						<ul>
 							<li>
 								<a href="#none">
