--- a/PC/html/new/search_none.html
+++ b/PC/html/new/search_none.html
@@ -705,7 +705,7 @@
 					<div class="category_wrap">
 						
 						<div>							
-							<h5 class="search_tit mgt20">혹시, 이런 키워드는 어떠세요?</h5>
+							<h5 class="search_tit pt80">혹시, 이런 키워드는 어떠세요?</h5>
 							<div class="keyword_list">
 								<ul>
 									<li><a href="#none">다이어리</a></li>
