--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -958,6 +958,37 @@ th.row-headers-background {
         <td class="s20"></td>
         <td class="s25"></td>
       </tr>
+       <tr style='height:29px;'>
+        <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
+       <td class="s14"></td>
+        <td class="s15" dir="ltr" colspan="9">
+        주석 <br>
+            210113 작업부분  <br>
+
+            210113 S : 작업부분 <br>
+            // 210113 E : 작업부분 <br>
+
+            
+        </td>
+      </tr>
+       <tr>
+            <th class="row-headers-background"></th>
+            <td class="s11" colspan="12"></td>
+        </tr>
+      <tr style='height:29px;'>
+        <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;">5</div></th>
+        <td class="s14"></td>
+        <td class="s15" dir="ltr">음반미러링</td>
+        <td class="s16">음반미러링</td>
+        <td class="s16" dir="ltr"></td>
+        <td class="s10"></td>
+        <td class="s16"></td>
+        <td class="s17"></td>
+        <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/record_video.html">http://dev.hottracks.co.kr/html/new/record_video.html</a></td>
+        <td class="s19" dir="ltr">완료</td>
+        <td class="s16"></td>
+        <td class="s4"></td>
+      </tr>
 <!--       <tr style='height:29px;'>
         <th id="2024277320R4" style="height: 29px;" class="row-headers-background"><div class="row-header-wrapper" style="line-height: 29px;"></div></th>
        <td class="s14"></td>
