--- a/PC/html/new/menu0_result.html
+++ b/PC/html/new/menu0_result.html
@@ -662,150 +662,20 @@
                                     </tr>
                                 </tbody>
                             </table>
+
+                            <!-- paging -->
+                            <div class="paging cs mgt40">
+                                <a title="맨 처음 페이지로 이동" href="javascript:;" class="first">처음</a>
+                                <ul>
+                                    <li class="active">
+                                        <a href="javascript://">1</a>
+                                    </li>
+                                </ul>
+                                <a title="맨 처음 페이지로 이동" href="javascript:;" class="next02">다음</a>
+                            </div>
+                            <!-- //paging -->    
                         <!-- //BEST FAQ -->
-                        <!-- 201228 작업부분 -->
-                        <!-- NEWS &amp; NOTICE -->
-                        <div class="s_title_wrap">
-                            <h3 class="s_title only_english">NEWS &amp; NOTICE</h3>
-                            <a href="javascript:;" class="btn_more">공지사항 전체보기</a>
-                        </div>
                         
-                        <table class="bbs_list01 ">
-                            <caption></caption>
-                            <colgroup>
-                                <!-- <col width="75" /> -->
-                                <col width="*">
-                                <col width="160">
-                                <!-- <col width="90"> -->
-                            </colgroup>
-                            <thead>
-                                <tr>
-                                    <!-- <th scope="col" class="fir">번호</th> -->
-                                    <th scope="col">제목</th>
-                                    <th scope="col">등록일</th>
-                                    <!-- <th scope="col" class="last">조회수</th> -->
-                                </tr>
-                            </thead>
-                            <tbody class="faqListTbody">
-                                <tr>
-                                    <!-- 201228 작업부분 -->
-                                    <!-- <td>10</td> -->
-                                    <!-- <td>상품문의</td> -->
-                                        <td class="t_left"> <input type="hidden"/>
-                                        <a href="#faq111" class="click">상품문의는 어디로 해야하나요?</a>
-                                    </td>
-                                    <td>2011.07.23</td>
-                                    <!-- 201228 작업부분 -->
-                                    <!-- <td id="faqHit117">6012</td> -->                                        
-                                </tr>
-                                <tr class="conts" id="faq111">
-                                    <td colspan="2">
-                                        <div class="txt">
-                                            <P>상품마다 업체로 직접 문의할 수 있는 Q&amp;A 코너가 마련되어 있습니다.
-                                            </P>
-                                            <P>&nbsp;</P>
-                                            <P>제품의 담당자가 직접 답변드리는 코너이오니 상품에 대한 궁금증은 상품 Q&amp;A 코너를 이용하여 주세요.
-                                            </P>
-                                            <P>&nbsp;</P>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <!-- 201228 작업부분 -->
-                                    <!-- <td>10</td> -->
-                                    <!-- <td>상품문의</td> -->
-                                        <td class="t_left"> <input type="hidden"/>
-                                        <a href="#faq112" class="click">상품문의는 어디로 해야하나요?</a>
-                                    </td>
-                                    <td>2011.07.23</td>
-                                    <!-- 201228 작업부분 -->
-                                    <!-- <td id="faqHit117">6012</td> -->                                        
-                                </tr>
-                                <tr class="conts" id="faq112">
-                                    <td colspan="2">
-                                        <div class="txt">
-                                            <P>상품마다 업체로 직접 문의할 수 있는 Q&amp;A 코너가 마련되어 있습니다.
-                                            </P>
-                                            <P>&nbsp;</P>
-                                            <P>제품의 담당자가 직접 답변드리는 코너이오니 상품에 대한 궁금증은 상품 Q&amp;A 코너를 이용하여 주세요.
-                                            </P>
-                                            <P>&nbsp;</P>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <!-- 201228 작업부분 -->
-                                    <!-- <td>10</td> -->
-                                    <!-- <td>상품문의</td> -->
-                                        <td class="t_left"> <input type="hidden"/>
-                                        <a href="#faq113" class="click">상품문의는 어디로 해야하나요?</a>
-                                    </td>
-                                    <td>2011.07.23</td>
-                                    <!-- 201228 작업부분 -->
-                                    <!-- <td id="faqHit117">6012</td> -->                                        
-                                </tr>
-                                <tr class="conts" id="faq113">
-                                    <td colspan="2">
-                                        <div class="txt">
-                                            <P>상품마다 업체로 직접 문의할 수 있는 Q&amp;A 코너가 마련되어 있습니다.
-                                            </P>
-                                            <P>&nbsp;</P>
-                                            <P>제품의 담당자가 직접 답변드리는 코너이오니 상품에 대한 궁금증은 상품 Q&amp;A 코너를 이용하여 주세요.
-                                            </P>
-                                            <P>&nbsp;</P>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <!-- 201228 작업부분 -->
-                                    <!-- <td>10</td> -->
-                                    <!-- <td>상품문의</td> -->
-                                        <td class="t_left"> <input type="hidden"/>
-                                        <a href="#faq114" class="click">상품문의는 어디로 해야하나요?</a>
-                                    </td>
-                                    <td>2011.07.23</td>
-                                    <!-- 201228 작업부분 -->
-                                    <!-- <td id="faqHit117">6012</td> -->                                        
-                                </tr>
-                                <tr class="conts" id="faq114">
-                                    <td colspan="2">
-                                        <div class="txt">
-                                            <P>상품마다 업체로 직접 문의할 수 있는 Q&amp;A 코너가 마련되어 있습니다.
-                                            </P>
-                                            <P>&nbsp;</P>
-                                            <P>제품의 담당자가 직접 답변드리는 코너이오니 상품에 대한 궁금증은 상품 Q&amp;A 코너를 이용하여 주세요.
-                                            </P>
-                                            <P>&nbsp;</P>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <!-- 201228 작업부분 -->
-                                    <!-- <td>10</td> -->
-                                    <!-- <td>상품문의</td> -->
-                                        <td class="t_left"> <input type="hidden"/>
-                                        <a href="#faq115" class="click">상품문의는 어디로 해야하나요?</a>
-                                    </td>
-                                    <td>2011.07.23</td>
-                                    <!-- 201228 작업부분 -->
-                                    <!-- <td id="faqHit117">6012</td> -->                                        
-                                </tr>
-                                <tr class="conts" id="faq115">
-                                    <td colspan="2">
-                                        <div class="txt">
-                                            <P>상품마다 업체로 직접 문의할 수 있는 Q&amp;A 코너가 마련되어 있습니다.
-                                            </P>
-                                            <P>&nbsp;</P>
-                                            <P>제품의 담당자가 직접 답변드리는 코너이오니 상품에 대한 궁금증은 상품 Q&amp;A 코너를 이용하여 주세요.
-                                            </P>
-                                            <P>&nbsp;</P>
-                                        </div>
-                                    </td>
-                                </tr>                                 
-                            </tbody>
-                        </table>
-                        <!-- //NEWS &amp; NOTICE -->
-                        <!--// 201228 : E 작업부분 -->
                     </div>
                     <!-- //sub contents -->
                 </div>
