--- a/MOBILE/html/new/popup_coupon_list.html
+++ b/MOBILE/html/new/popup_coupon_list.html
@@ -47,98 +47,82 @@
 	<div id="content">
 
 		<div class="pull_box coupon_list_wrap">
-			<ul class="text_list">
+			<div class="f12 pt10 pb20">
+	            <p><span class="col_salmon">상품 쿠폰</span>과 <span class="col_salmon">주문금액 쿠폰</span>은 중복으로 사용이 불가능합니다.<br>(무료배송 쿠폰은 가능합니다.)</p>
+	            <p><span class="col_salmon">주문 취소/반품</span>을 하시게 되면 적용된 <span class="col_salmon">쿠폰은 환원이 되지 않습니다.</span> 유념해주시기 바랍니다.</p>
+	            <p>무료배송 쿠폰은 국내 배송 상품만 사용 가능하며, 착불 상품 및 도선료는 해당되지 않습니다.</p>
+	        </div>
+			<!-- <ul class="text_list">
 	            <li>1. 상품 쿠폰과 주문금액 쿠폰은 중복으로 사용이 불가능합니다.<br><span class="color">(무료 배송 쿠폰은 가능합니다.)</span></li>
 	            <li>2. 주문 취소/반품을 하시게 되면 적용된 쿠폰은 환원이 되지 않습니다. 유념해주시기 바랍니다.</li>
 	            <li>3. 무료 배송 쿠폰은 국내 배송 상품만 사용 가능하며, 착불 상품 및 도선료는 해당되지 않습니다.</li>
-	        </ul>
-	        <div>
-	        	<div class="coupon_alert_wrap">
-	        		<p class="coupon_list_icon">쿠폰리스트</p>
-	        		<dl class="coupon_alert">
-	        			<dt>
-	        				적용 가능한 상품 쿠폰
-	        			</dt>
-	        			<dd>
-	        				<span class="color_02">999</span>
-	        				<span>장</span>
-	        			</dd>
-	        		</dl>
-	        	</div>
+	        </ul> -->
 
-	        	<!-- 리스트 반복 -->
-	            <dl class="coupon_list">
-	            	<dt class="coupon_product">
-	            		<div class="product_name">
-	            			1. 웍스 S스케줄러 1년 라임그린 미디에스
-	            		</div>
-	            		<div class="price"><span class="only_english">3000</span><span>원</span></div>
-	            		<div class="img">
-	            			<img src="../../images/new/@img.png" alt="">
-	            		</div>
-	            	</dt>
-	            	<dd class="coupon_name">
-	            		<div class="select_wrap">
-                            <select name="" id="" class="width_check">
-                                <option value="">웍스 10% (1,000원 할인) </option>
-                            </select>
-                        </div>
-                        <div class="alert_coupon_text">쿠폰을 선택해주세요.</div>
-	            	</dd>
-	            </dl>
-	            <!-- 리스트 반복 -->
-	            <dl class="coupon_list">
-	            	<dt class="coupon_product">
-	            		<div class="product_name">
-	            			1. 웍스 S스케줄러 1년 라임그린 미디에스
-	            		</div>
-	            		<div class="price"><span class="only_english">3000</span><span>원</span></div>
-	            		<div class="img">
-	            			<img src="../../images/new/@img.png" alt="">
-	            		</div>
-	            	</dt>
-	            	<dd class="coupon_name">
-	            		<div class="select_wrap">
-                            <select name="" id="" class="width_check">
-                                <option value="">웍스 10% (1,000원 할인) </option>
-                            </select>
-                        </div>
-                        <div class="alert_coupon_text">쿠폰을 선택해주세요.</div>
-	            	</dd>
-	            </dl>
-	        </div>
+	        <h3>적용 가능한<strong> 상품 쿠폰</strong>이 총 <strong class="col_red"> 2</strong>장 있습니다.</h3>
+            <div class="roundbox mt10">
+                <h3><strong>웍스 S스케줄러 1년 라임그린 미디에스</strong></h3>
+                <ul class="br_list">
+                    <li>
+                        <input type="hidden" name="cartSeq" value="12551210">
+                        <input type="hidden" name="userCouponSequence" value="0">
+                        <span class="f14 fl_l mt7 col_grey">쿠폰 선택</span>
+                        <span class="fl_r">
+                        	<span class="select_wrap">
+	                            <select name="couponSelect" class="select couponSelect12551210">
+	                                <option value="">쿠폰을 선택하세요</option>
+	                                    <option value="48">웍스 10%</option>
+	                                    <option value="49">웍스 10%</option>
+	                            </select>
+                            </span>
+                        </span>
+                    </li>
+                </ul>
+            </div>
 
-	        <div class="free_order_wrap">
-	        	<dl class="coupon_list">
-	            	<dt class="coupon_product">
-	            		<div class="product_name">
-	            			무료 배송 쿠폰
-	            		</div>
-	            	</dt>
-	            	<dd class="coupon_name">
-	            		<div class="select_wrap">
-                            <select name="" id="" class="width_check">
-                                <option value="">신규 회원 무료 배송 쿠폰</option>
-                            </select>
-                        </div>
-                        <div class="alert_coupon_text">쿠폰을 선택해주세요.</div>
-	            	</dd>
-	            </dl>
-	        </div>
-
-	        <div class="coupon_sum_wrap">
-	        	<div class="coupon_sum">
-	        		<span class="coupon_sum_left">쿠폰 할인 금액</span>
-	        		<span class="coupon_sum_right">
-	        			<span class="point02 only_english">10,000</span>
-	        			<span>원</span>
-	        		</span>
-	        	</div>
-	        	<p class="coupon_sum_txt">
-	        		무료 배송 쿠폰 : 신규회원 무료배송 쿠폰 사용
-	        	</p>
-	        </div>
-
+            <h3 class="mt30">적용 가능한<strong> 주문금액 쿠폰</strong>이 총 <strong class="col_red"> 0</strong>장 있습니다.</h3>
+            <div class="roundbox mt10">
+                <h3><strong>플래티넘 온라인전용 3천원</strong></h3>
+                <ul class="br_list">
+                    <li>
+                        <span class="fl_l col_grey">
+                        	<span class="choice_wrap have_inner_txt between_space">
+		                        <span class="choice_wrap_inner">
+		                            <input type="checkbox"  name="orderCouponRadio" id="orderInfo_102" value="Y">
+		                            <label for="orderInfo_102">할인금액</label>
+		                        </span>
+		                    </span>
+                        </span>
+                        <span class="fl_r col_black"><strong class="col_red">3,000</strong>원</span>
+                    </li>
+                    <li>
+                        <span class="fl_l col_grey">2019-12-01 ~ 2019-12-31</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="roundbox mt10">
+                <h3 class=""><strong>한국폼텍/인터넷<strong></strong></strong></h3>
+                <ul class="br_list">
+                    <li>
+                        <span class="fl_l col_grey">배송비</span>
+                        <span class="fl_r col_black"><strong class="col_red">2,700</strong>원</span>
+                    </li>
+                    <li>
+                        <input type="hidden" name="dlvyVndrId" value="10773">
+                        <input type="hidden" name="userDlvyCouponSequence" value="0">
+                        <span class="f14 fl_l mt7 col_grey">쿠폰선택</span>
+                        <span class="fl_r">
+                        	<span class="select_wrap">
+                        		<select name="deliveryCouponSelect" class="select deliveryCouponSelect10773">
+		                             <option value="">쿠폰을 선택하세요</option>
+		                            <option value="62">플래티넘 온라인 무료배송</option>
+		                            <option value="63">플래티넘 온라인 무료배송</option>
+		                            <option value="64">플래티넘 온라인 무료배송</option>
+			                    </select>
+                           	</span>
+                        </span>
+                    </li>
+                </ul>
+            </div>
 	        
         	<div class="btn_type_wrap distance">
 	            <a href="javascript:;" class="btn_basic">쿠폰 적용</a>
