--- a/PC/html/new/menu4_2.html
+++ b/PC/html/new/menu4_2.html
@@ -180,7 +180,8 @@ $(document).ready(function(){
                 <div class="lnb">  
                     <!-- 201228 작업부분 -->
                     <!-- sub top -->
-                        <div class="page_location"> <h2 class="title">
+                    <div class="page_location">
+                        <h2 class="title">
                             <a href="javascript:;">고객센터</a>
                         </h2>
                     </div>
@@ -310,7 +311,7 @@ $(document).ready(function(){
                         <ul> 
                             <li><a href="/ht/help/faqListC0401"><span>회원정보</span></a></li>
                             <li><a href="/ht/help/faqListC0402" class="on" ><span>통합포인트/예치금/쿠폰</span></a></li>
-                            <li><a href="/ht/help/faqListC0403" ><span>상품문의</span></a></li>
+                            <!-- <li><a href="/ht/help/faqListC0403" ><span>상품문의</span></a></li> -->
                             <li><a href="/ht/help/faqListC0404" ><span>이벤트</span></a></li> 
                         </ul>
                     </div>
