--- a/PC/html/new/popupBulkList.html
+++ b/PC/html/new/popupBulkList.html
@@ -30,24 +30,24 @@
                     <div class="pop_cont">
                         <form name="searchedForm" method="post" action="/ht/searchProduct">
                             <div class="choice_wrap">
-                                <div class="have_inner_txt inner_float nodash">
-                                    <span class="select_wrap width_popup_point">
+                                <div class="have_inner_txt inner_float">
+                                    <!-- <span class="select_wrap width_popup_point">
                                         <select name="" id="" class="" onchange="clickGnbSrchMenu()">
                                             <option value="">기프트</option>
                                             <option value="">음반/영상</option>
                                         </select>
-                                    </span>
+                                    </span> -->
                                     <span class="input_wrap">
                                         <input type="text" placeholder="" class="width_bulk">
                                     </span>
-                                    <a href="javascript://" onclick="document.searchedForm.submit()" class="btn_type01 btn_space" id="btnSearch">검색</a>
+                                    <a href="javascript://" onclick="document.searchedForm.submit()" class="btn_type01 btn_style11 btn_space" id="btnSearch">검색</a>
                                 </div>
                             </div>
                             <!-- 
-                                                    <div class="pop_tit">
-                                                        <input type="text" name="searchTerm" value="" class="input_txt" style="width:250px;"/>
-                                                        <a href="javascript://" onclick="document.searchedForm.submit()" class="btn_type01" id="btnSearch">검색</a>
-                                                    </div> -->
+                            <div class="pop_tit">
+                                <input type="text" name="searchTerm" value="" class="input_txt" style="width:250px;"/>
+                                <a href="javascript://" onclick="document.searchedForm.submit()" class="btn_type01" id="btnSearch">검색</a>
+                            </div> -->
                             <div class="tbl_top">
                                 <div class="f_left">
                                     <ul class="tab_btn02" id="ulSort">
