--- a/PC/html/new/popupCouponList.html
+++ b/PC/html/new/popupCouponList.html
@@ -32,7 +32,7 @@
         <div class="tooltip_wrap active">
             <div class="tooltip_inner">  
                 <p class="tooltip_tit">쿠폰 조회/적용</p>
-
+                <!-- 210118 S : 작업부분 -->
                 <div class="pop_cont">
                     <ul class="list_type02_v2">
                         <li><span class="point02">상품 쿠폰</span>과 <span class="point02">주문금액 쿠폰</span>은 중복으로 사용이 불가능합니다. (무료 배송 쿠폰은 가능합니다.)</li>
@@ -167,10 +167,11 @@
                         <a href="#n" _onclick="applyCoupon()" class="btn_type04_v1 mgl10"><span>쿠폰적용</span></a>
                     </div>
                 </div> 
+                <!--// 210118 E : 작업부분 -->
             </div>
             <a href="javascript:;" class="tooltip_close">닫기</a>
         </div>
     </div>
 </body>
-<!--// 201222 E : 작업부분
+<!--// 201222 E : 작업부분 -->
 </html>
