--- a/PC/path_now.html
+++ b/PC/path_now.html
@@ -829,7 +829,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/search.html">http://dev.hottracks.co.kr/html/new/search.html</a></td>
         <td class="s19" dir="ltr">완료</td>
-        <td class="s16">인기검색어 슬라이드, 결과팝업</td>
+        <td class="s16">인기검색어 슬라이드, 결과팝업, 210118 슬라이드 수정</td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
@@ -918,7 +918,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="http://dev.hottracks.co.kr/html/new/popupCouponList.html">http://dev.hottracks.co.kr/html/new/popupCouponList.html</a></td>
         <td class="s19" dir="ltr">완료</td>
-        <td class="s16"></td>
+        <td class="s16">주석 210118 S : 작업부분</td>
         <td class="s4"></td>
       </tr>
       <tr style='height:29px;'>
