--- a/MOBILE/html/new/popup_coupon_list.html
+++ b/MOBILE/html/new/popup_coupon_list.html
@@ -45,7 +45,7 @@
 
 	<!-- content -->
 	<div id="content">
-
+		<!-- 주석 210118 S : 작업부분 -->
 		<div class="pull_box coupon_list_wrap">
 			<div class="f12 pt10 pb20">
 	            <p><span class="col_salmon">상품 쿠폰</span>과 <span class="col_salmon">주문금액 쿠폰</span>은 중복으로 사용이 불가능합니다.<br>(무료배송 쿠폰은 가능합니다.)</p>
@@ -128,7 +128,7 @@
 	            <a href="javascript:;" class="btn_basic">쿠폰 적용</a>
 	        </div>
 		</div>
-		
+		<!--// 주석 210118 E : 작업부분 -->
 	</div>
 	<!--// content -->
 	<!--// 201222 E : 작업부분 -->
