--- a/MOBILE/path_now.html
+++ b/MOBILE/path_now.html
@@ -940,7 +940,7 @@ th.row-headers-background {
         <td class="s17"></td>
         <td class="s18" dir="ltr"><a target="_blank" href="http://devm.hottracks.co.kr/html/new/popup_coupon_list.html">http://devm.hottracks.co.kr/html/new/popup_coupon_list.html</a></td>
         <td class="s19" dir="ltr">완료</td>
-        <td class="s16"></td>
+        <td class="s16">주석 210118 E : 작업부분</td>
         <td class="s4"></td>
       </tr>
       <tr style="height:29px;">
